...
                        tools:visibility="visible"
                        tools:text="Stylish" />

                </androidx.appcompat.widget.Toolbar>

                <fragment
                    android:id="@+id/myNavHostFragment"
                    android:name="androidx.navigation.fragment.NavHostFragment"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:defaultNavHost="true"
                    app:layout_constraintBottom_toTopOf="@+id/bottomNavView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar"
                    app:layout_constraintVertical_bias="1.0"
                    app:navGraph="@navigation/navigation" />
...
