...
                    app:layout_constraintEnd_toEndOf="@id/user_level"
                    app:layout_constraintTop_toBottomOf="@id/user_level"
                    android:text="level"
                    app:layout_constraintBottom_toBottomOf="@id/followers"/>

                <Button
                    android:id="@+id/btn_follow"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    app:layout_constraintStart_toStartOf="@id/followers"
                    app:layout_constraintEnd_toEndOf="@id/user_level"
                    app:layout_constraintTop_toBottomOf="@id/following"
                    android:layout_marginTop="16dp"
                    android:textSize="13sp"
                    android:fontFamily="@font/comfortaa"
                    android:letterSpacing="0.15"
                    android:textStyle="bold"
                    android:textColor="@{viewModel.statusAbout == false ? @color/white : @color/black_3f3a3a}"
                    android:background="@{viewModel.statusAbout == false ? @drawable/background_follow : @drawable/background_followed }"
                    android:text='@{viewModel.statusAbout == false ? "Follow" : "Following"}'
                    android:onClick="@{() -> viewModel.setAboutStatus()}"/>


                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewpager_profile"
                    android:layout_width="match_parent"
...
