...
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="0dp"
                    android:background="@drawable/background_search"
                    android:paddingVertical="16dp"
                    android:paddingEnd="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/drink_btn"
                    app:layout_constraintTop_toTopOf="parent"
                    android:hint="@string/search_hint"
                    android:paddingStart="44dp" />

                <Button
                    android:id="@+id/drink_btn"
                    style="@style/DetailDescription"
                    android:layout_width="70dp"
                    android:layout_height="0dp"
                    android:onClick="@{() -> viewModel.setSearchStatus()}"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="16dp"
                    android:text='@{viewModel.statusType == true ? "Drink" : "Bar"}'
                    android:background="@drawable/background_search_type"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    app:layout_constraintStart_toEndOf="@id/search_edit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/search_edit"
...
