...
                    android:id="@+id/recycler_detail_images"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:images="@{viewModel.drink.images}"
                    app:layout_constraintTop_toBottomOf="@id/btn_like"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/about"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

                </androidx.recyclerview.widget.RecyclerView>
...
                    android:text="Reviews"
                    style="@style/DetailContent"
                    app:layout_constraintTop_toBottomOf="@id/pairings"
                    app:layout_constraintStart_toStartOf="@id/title"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_ratings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:ratings="@{viewModel.ratings}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/review"
...
