...

                <ImageView
                    android:id="@+id/search_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="@id/searchText"
                    app:layout_constraintBottom_toBottomOf="@id/searchText"
                    app:layout_constraintTop_toTopOf="@id/searchText"
                    app:srcCompat="@drawable/search_icon"/>

                <EditText
                    android:id="@+id/searchText"
...





                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:visibility="gone"
                    android:background="@color/translucent_40"
                    app:user="@{viewModel.searchedUser}"
...
