<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_nav_home_selector"
            android:title=""/>

    <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_nav_search_selector"
            android:title=""/>

    <item
            android:id="@+id/navigation_rate"
            android:icon="@drawable/ic_nav_rate_selector"
            android:title=""/>

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_nav_friends_selector"
        android:title=""/>

    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_nav_profile_selector"
            android:title=""/>

</menu>
