...
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_999999"/>

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabs_catalog"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_tab"
                        android:elevation="4dp"
                        android:background="@drawable/background_tab"
                        app:tabIndicatorColor="@color/black_3f3a3a"
                        app:tabSelectedTextColor="@color/black_3f3a3a"
...
